--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -15,27 +15,19 @@
             </intent-filter>
         </activity>
 
-
-        <receiver android:name="ExampleAppWidgetProvider">
+        <receiver android:name="DazzleProvider">
             <meta-data android:name="android.appwidget.provider"
-                    android:resource="@xml/appwidget_provider" />
+                    android:resource="@xml/dazzle_meta" />
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
         </receiver>
 
-        <activity android:name="ExampleAppWidgetConfigure">
+        <activity android:name="DazzleConfigure">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
-
-        <receiver android:name="ExampleBroadcastReceiver" android:enabled="false">
-            <intent-filter>
-                <action android:name="android.intent.ACTION_TIMEZONE_CHANGED" />
-                <action android:name="android.intent.ACTION_TIME" />
-            </intent-filter>
-        </receiver>
 
     </application>
     
