--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -6,9 +6,10 @@
       android:versionName="1.0">
       
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-    
-        <activity android:name=".Dazzle"
-                  android:label="@string/app_name">
+
+        <activity android:name="DazzleControl"
+                android:label="@string/app_name"
+                android:theme="@android:style/Theme.Dialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,12 +23,6 @@
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
         </receiver>
-
-        <activity android:name="DazzleConfigure">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
-            </intent-filter>
-        </activity>
 
     </application>
     
