--- a/Test Card/AndroidManifest.xml
+++ b/Test Card/AndroidManifest.xml
@@ -4,7 +4,7 @@
       package="org.hermit.testcard"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
     
         <activity android:name=".TestCard"
                   android:label="@string/app_name" android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation" android:screenOrientation="portrait" android:launchMode="singleTop">
