--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -5,20 +5,68 @@
       android:versionCode="1"
       android:versionName="1.0">
       
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
 
-        <activity android:name="DazzleControl"
+        <activity android:name="BrightnessControl"
                 android:label="@string/app_name"
                 android:theme="@android:style/Theme.Dialog">
             <intent-filter>
             </intent-filter>
         </activity>
 
-        <receiver android:name="DazzleProvider">
+        <receiver android:name="Dazzle11Provider" android:label="@string/widget_11_name">
             <meta-data android:name="android.appwidget.provider"
-                    android:resource="@xml/dazzle_meta" />
+                    android:resource="@xml/dazzle_11_meta" />
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+                <action android:name="android.net.conn.BACKGROUND_DATA_SETTING_CHANGED" />
+                <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
+                
+                <!-- Pick up misc. changes. -->
+                <action android:name="android.intent.action.CLOSE_SYSTEM_DIALOGS" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name="Dazzle21Provider" android:label="@string/widget_21_name">
+            <meta-data android:name="android.appwidget.provider"
+                    android:resource="@xml/dazzle_21_meta" />
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+                <action android:name="android.net.conn.BACKGROUND_DATA_SETTING_CHANGED" />
+                <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
+                
+                <!-- Pick up misc. changes. -->
+                <action android:name="android.intent.action.CLOSE_SYSTEM_DIALOGS" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name="Dazzle31Provider" android:label="@string/widget_31_name">
+            <meta-data android:name="android.appwidget.provider"
+                    android:resource="@xml/dazzle_31_meta" />
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+                <action android:name="android.net.conn.BACKGROUND_DATA_SETTING_CHANGED" />
+                <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
+                
+                <!-- Pick up misc. changes. -->
+                <action android:name="android.intent.action.CLOSE_SYSTEM_DIALOGS" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name="Dazzle41Provider" android:label="@string/widget_41_name">
+            <meta-data android:name="android.appwidget.provider"
+                    android:resource="@xml/dazzle_41_meta" />
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+                <action android:name="android.net.conn.BACKGROUND_DATA_SETTING_CHANGED" />
+                <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
+                
+                <!-- Pick up misc. changes. -->
+                <action android:name="android.intent.action.CLOSE_SYSTEM_DIALOGS" />
             </intent-filter>
         </receiver>
 
@@ -26,6 +74,10 @@
     
     <uses-sdk android:minSdkVersion="4" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	
 </manifest>
 
