--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -74,5 +74,6 @@
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 </manifest>
 
