--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -50,6 +50,13 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name="RingerControl"
+                android:label="@string/app_name"
+                android:theme="@android:style/Theme.Dialog">
+            <intent-filter>
+            </intent-filter>
+        </activity>
+
         <activity android:name="BrightnessControl"
                 android:label="@string/app_name"
                 android:theme="@android:style/Theme.Dialog">
