--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -44,6 +44,7 @@
                 <action android:name="android.net.conn.BACKGROUND_DATA_SETTING_CHANGED" />
                 <action android:name="android.bluetooth.adapter.action.STATE_CHANGED" />
                 <action android:name="android.intent.action.AIRPLANE_MODE" />
+                <action android:name="android.media.RINGER_MODE_CHANGED" />
                 
                 <!-- Pick up misc. changes. -->
                 <action android:name="android.intent.action.CLOSE_SYSTEM_DIALOGS" />
