--- a/Hermit Android/AndroidManifest.xml
+++ b/Hermit Android/AndroidManifest.xml
@@ -15,4 +15,5 @@
     </application>
     <uses-sdk android:minSdkVersion="4" />
 
+<uses-permission android:name="android.permission.WRITE_SETTINGS"></uses-permission>
 </manifest> 
