--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.dazzle"
-      android:versionCode="4" android:versionName="2.2">
+      android:versionName="2.3" android:versionCode="5">
       
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 
