--- a/TouchTest/AndroidManifest.xml
+++ b/TouchTest/AndroidManifest.xml
@@ -2,11 +2,11 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.touchtest"
-      android:versionName="1.0" android:versionCode="1">
+      android:versionName="1.1" android:versionCode="2">
     
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/touchtest_icon" android:label="@string/app_name" android:debuggable="true">
     
-		<activity android:name="TouchTest" android:icon="@drawable/icon" android:label="@string/app_name" android:screenOrientation="sensor">
+		<activity android:name="TouchTest" android:icon="@drawable/touchtest_icon" android:label="@string/app_name" android:screenOrientation="sensor">
 			<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
