--- a/TouchTest/AndroidManifest.xml
+++ b/TouchTest/AndroidManifest.xml
@@ -4,7 +4,7 @@
       package="org.hermit.touchtest"
       android:versionName="1.2" android:versionCode="3">
     
-    <application android:icon="@drawable/touchtest_icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/touchtest_icon" android:label="@string/app_name" android:debuggable="false">
     
 		<activity android:name="TouchTest" android:icon="@drawable/touchtest_icon" android:label="@string/app_name" android:screenOrientation="sensor">
 			<intent-filter>
