--- a/TouchTest/AndroidManifest.xml
+++ b/TouchTest/AndroidManifest.xml
@@ -13,10 +13,17 @@
 			</intent-filter>
 		</activity>
 		
+		<activity android:name=".Help" android:launchMode="singleTop" android:configChanges="mcc|mnc|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout" android:label="@string/help_title">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"></action>
+			</intent-filter>
+		</activity>
+		
 	</application>
 
     <uses-sdk android:minSdkVersion="4"/>
 	<uses-configuration android:reqTouchScreen="finger" />
 	
+<supports-screens android:smallScreens="true" android:largeScreens="true" android:resizeable="true" android:normalScreens="true" android:anyDensity="true"></supports-screens>
 </manifest>
 
