--- a/Plughole/AndroidManifest.xml
+++ b/Plughole/AndroidManifest.xml
@@ -27,6 +27,8 @@
 		</activity>
 
 	</application>
-<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+
 <uses-sdk android:minSdkVersion="4"></uses-sdk>
+<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 </manifest>
