--- a/Tricorder/default.properties
+++ b/Tricorder/default.properties
@@ -7,8 +7,9 @@
 # "build.properties", and override values to adapt the script to your
 # project structure.
 
-apk-configurations=
-# Project target.
-target=android-7
 # Indicates whether an apk should be generated for each density.
 split.density=false
+android.library.reference.1=../HermitAndroid/
+# Project target.
+target=android-7
+apk-configurations=
