--- a/Scrambled Net Lite/default.properties
+++ b/Scrambled Net Lite/default.properties
@@ -9,6 +9,7 @@
 
 # Indicates whether an apk should be generated for each density.
 split.density=false
+android.library.reference.1=../HermitAndroid/
 # Project target.
-target=android-6
+target=android-8
 apk-configurations=
