--- a/Scrambled Net Lite/AndroidManifest.xml
+++ b/Scrambled Net Lite/AndroidManifest.xml
@@ -24,7 +24,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.hermit.netscramble" android:versionCode="25" android:versionName="4.2">
     
-    <application android:icon="@drawable/netscramble" android:label="@string/title" android:description="@string/description" android:debuggable="false">
+    <application
+    		android:icon="@drawable/netscramble"
+    		android:label="@string/title"
+    		android:description="@string/description"
+    		android:debuggable="false">
+    		
         <activity android:name="NetScramble" android:label="@string/title" android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +38,12 @@
             </intent-filter>
         </activity>
 
+		<activity android:name=".ScoreList" android:launchMode="singleTop" android:label="@string/scores_title" android:configChanges="mcc|mnc|touchscreen|keyboard|keyboardHidden|navigation">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"></action>
+			</intent-filter>
+		</activity>
+
 		<activity android:name=".Help" android:launchMode="singleTop" android:configChanges="mcc|mnc|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout" android:label="@string/help_title">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"></action>
@@ -40,8 +51,8 @@
 		</activity>
     </application>
     
-<uses-sdk android:minSdkVersion="4"></uses-sdk>
-<supports-screens android:smallScreens="true" android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:resizeable="true"></supports-screens>
+	<uses-sdk android:minSdkVersion="4"></uses-sdk>
+	<supports-screens android:smallScreens="true" android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:resizeable="true"></supports-screens>
 
 </manifest> 
 
