--- a/Test Card/default.properties
+++ b/Test Card/default.properties
@@ -7,7 +7,8 @@
 # "build.properties", and override values to adapt the script to your
 # project structure.
 
-# Project target.
-target=android-4
 # Indicates whether an apk should be generated for each density.
 split.density=false
+android.library.reference.1=../HermitAndroid/
+# Project target.
+target=android-4
