--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.dazzle"
-      android:versionName="2.4" android:versionCode="6">
+      android:installLocation="auto" android:versionCode="7" android:versionName="2.5">
       
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 
