--- a/Substrate/AndroidManifest.xml
+++ b/Substrate/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.substrate" android:versionName="1.3" android:versionCode="4">
+	package="org.hermit.substrate" android:installLocation="internalOnly" android:versionCode="5" android:versionName="1.4">
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
 
@@ -136,6 +136,7 @@
 
 	<uses-sdk android:minSdkVersion="7" />
 	<supports-screens android:resizeable="true" android:smallScreens="true" android:largeScreens="true" android:normalScreens="true" android:anyDensity="true"></supports-screens>
+	<uses-feature android:name="android.software.live_wallpaper" />
 	
 </manifest>
 
