--- a/Substrate/AndroidManifest.xml
+++ b/Substrate/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.substrate" android:installLocation="internalOnly" android:versionCode="8" android:versionName="1.7">
+	package="org.hermit.substrate" android:installLocation="internalOnly" android:versionName="1.7.1" android:versionCode="9">
 
 	<application android:icon="@drawable/substrate_icon" android:label="@string/app_name" android:debuggable="false">
 
@@ -138,6 +138,6 @@
 	<supports-screens android:resizeable="true" android:smallScreens="true" android:largeScreens="true" android:normalScreens="true" android:anyDensity="true"></supports-screens>
 	
 	
-<uses-feature android:name="android.software.live_wallpaper"></uses-feature>
+<!--<uses-feature android:name="android.software.live_wallpaper"></uses-feature>-->
 </manifest>
 
