--- a/TouchTest/AndroidManifest.xml
+++ b/TouchTest/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.touchtest"
-      android:versionName="1.3" android:versionCode="4">
+      android:installLocation="auto" android:versionName="1.4" android:versionCode="5">
     
     <application android:icon="@drawable/touchtest_icon" android:label="@string/app_name" android:debuggable="false">
     
