--- a/Test Card/AndroidManifest.xml
+++ b/Test Card/AndroidManifest.xml
@@ -2,8 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.testcard"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:installLocation="auto" android:versionName="1.1" android:versionCode="2">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
     
         <activity android:name=".TestCard"
