--- a/TiltLander/AndroidManifest.xml
+++ b/TiltLander/AndroidManifest.xml
@@ -16,8 +16,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.tiltlander" android:versionName="2.0"
-	android:versionCode="5">
+	package="org.hermit.tiltlander" android:installLocation="auto" android:versionName="2.1" android:versionCode="6">
 	
 	<application android:icon="@drawable/app_lunar_lander"
 		android:label="@string/app_name" android:description="@string/app_desc"
