--- a/Substrate/AndroidManifest.xml
+++ b/Substrate/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.substrate" android:versionName="1.7.2" android:versionCode="10">
+	package="org.hermit.substrate" android:versionCode="11" android:versionName="1.7.3">
 
 	<application android:icon="@drawable/substrate_icon" android:label="@string/app_name" android:debuggable="false">
 
