--- a/Scrambled Net Full/AndroidManifest.xml
+++ b/Scrambled Net Full/AndroidManifest.xml
@@ -22,7 +22,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.hermit.netscramblefull" android:versionCode="24" android:versionName="4.1">
+    package="org.hermit.netscramblefull" android:versionName="5.0" android:versionCode="25">
     
     <application android:icon="@drawable/netscramble" android:label="@string/title" android:description="@string/description" android:debuggable="false">
         <activity android:name="NetScramble" android:label="@string/title" android:launchMode="singleTop">
