--- a/Scrambled Net Full/AndroidManifest.xml
+++ b/Scrambled Net Full/AndroidManifest.xml
@@ -22,10 +22,10 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.hermit.netscramblefull" android:versionName="5.0" android:versionCode="25">
+    package="org.hermit.netscramblefull" android:versionName="5.0" android:versionCode="25" android:installLocation="auto">
     
     <application android:icon="@drawable/netscramble" android:label="@string/title" android:description="@string/description" android:debuggable="false">
-        <activity android:name="NetScramble" android:label="@string/title" android:launchMode="singleTop">
+        <activity android:name="NetScramble" android:label="@string/title" android:launchMode="singleTop" android:alwaysRetainTaskState="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
