--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.dazzle"
-      android:installLocation="internalOnly" android:versionCode="8" android:versionName="2.6">
+      android:installLocation="internalOnly" android:versionCode="9" android:versionName="2.7">
       
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 
@@ -54,6 +54,10 @@
                 
                 <!-- Pick up misc. changes. -->
                 <action android:name="android.intent.action.CLOSE_SYSTEM_DIALOGS" />
+                
+                <!--  radio and mobile data intents -->
+                <action android:name="android.intent.action.SIM_STATE_CHANGED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
 
@@ -90,5 +94,10 @@
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
 	
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
 </manifest>
 
