--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.dazzle"
-      android:installLocation="internalOnly" android:versionCode="9" android:versionName="2.7">
+      android:installLocation="internalOnly" android:versionCode="10" android:versionName="2.8">
       
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 
@@ -56,8 +56,11 @@
                 <action android:name="android.intent.action.CLOSE_SYSTEM_DIALOGS" />
                 
                 <!--  radio and mobile data intents -->
+                <!-- TODO: move these in a separate receiver and enable/disable it only when required -->
                 <action android:name="android.intent.action.SIM_STATE_CHANGED" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <!--  required to restore mobile data state -->
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
