--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.dazzle"
-      android:installLocation="internalOnly" android:versionCode="10" android:versionName="2.8">
+      android:installLocation="internalOnly" android:versionCode="11" android:versionName="2.8.2">
       
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 
@@ -84,7 +84,8 @@
 			</intent-filter>
 		</activity>
 
-    </application>
+    <service android:exported="false" android:name=".observers.ObserverService"></service>
+</application>
     
     <uses-sdk android:minSdkVersion="4" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
