--- a/Formula/.classpath
+++ b/Formula/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="Hermit Android"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Hermit Library"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/HermitAndroid"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/HermitLibrary"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
