--- a/BatteryTracker/AndroidManifest.xml
+++ b/BatteryTracker/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="org.hermit.android.battrack"
       android:versionCode="1"
       android:versionName="1.0">
+    <supports-screens android:resizeable="true" android:smallScreens="true" android:largeScreens="true" android:anyDensity="true" android:normalScreens="true"></supports-screens>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".BatteryTracker"
                   android:label="@string/app_name">
