--- a/Broadcast Dumper/AndroidManifest.xml
+++ b/Broadcast Dumper/AndroidManifest.xml
@@ -2,6 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionName="1.0" android:versionCode="1" package="org.hermit.broadtest">
+    <supports-screens android:resizeable="true" android:smallScreens="true" android:largeScreens="true" android:anyDensity="true" android:normalScreens="true"></supports-screens>
     
     <application
     	android:icon="@drawable/icon"
@@ -97,7 +98,7 @@
 		
 	</application>
 
-    <uses-sdk android:minSdkVersion="7"/>
+    <uses-sdk android:minSdkVersion="8"/>
 	
 </manifest>
 
