--- a/Broadcast Dumper/default.properties
+++ b/Broadcast Dumper/default.properties
@@ -9,6 +9,6 @@
 
 # Indicates whether an apk should be generated for each density.
 split.density=false
-android.library.reference.1=../HermitAndroid/
 # Project target.
-target=android-7
+target=android-8
+android.library.reference.1=../HermitAndroid
