--- a/Clusterer/AndroidManifest.xml
+++ b/Clusterer/AndroidManifest.xml
@@ -5,6 +5,7 @@
 	android:versionName="1.1">
 
 	<uses-sdk android:minSdkVersion="4"/>
+	<supports-screens android:resizeable="true" android:normalScreens="true" android:anyDensity="true" android:largeScreens="true" android:smallScreens="true"></supports-screens>
 	
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name=".ClusterActivity" android:label="@string/app_name"
