--- a/Test Card/.project
+++ b/Test Card/.project
@@ -36,5 +36,10 @@
 			<type>2</type>
 			<locationURI>_android_HermitAndroid/src</locationURI>
 		</link>
+		<link>
+			<name>HermitAndroid_src</name>
+			<type>2</type>
+			<locationURI>_android_HermitAndroid_810781ac/src</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
