--- a/TouchTest/.classpath
+++ b/TouchTest/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="HermitAndroid"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/HermitLibrary"/>
+	<classpathentry kind="src" path="HermitAndroid_src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
